--- a/build.properties
+++ b/build.properties
@@ -6,8 +6,8 @@ dev_database_name=Pers_Development
 cherry.dir.sprocs=Sql_Stored_Procedures
 
 # Dev Values
-wc.dev.database.server=${dev_server}
-wc.dev.database.name=${dev_database_name}
-wc.dev.executiontimeout=1200
-wc.dev.debug=true
-wc.dev.httpcookiesrequiressl=false  
+dev.database.server=${dev_server}
+dev.database.name=${dev_database_name}
+dev.executiontimeout=1200
+dev.debug=true
+dev.httpcookiesrequiressl=false  
