--- a/build.xml
+++ b/build.xml
@@ -42,9 +42,9 @@
 	<target name="run_sql_scripts" >
 		<echo> About to connect to server ${database.server} database ${database.name}</echo>
 		<echo>${libs.dir}</echo>
-		<!--
-		<sql driver="com.microsoft.sqlserver.jdbc.SQLServerDriver" strictDelimiterMatching="false"
-		url="jdbc:sqlserver://${database.server};DatabaseName=${database.name};integratedSecurity=true"
+		
+		<mysql driver="com.mysql.jdbc.Driver" strictDelimiterMatching="false"
+		url="jdbc:mysql://${database.server};DatabaseName=${database.name};integratedSecurity=true"
 		userid="" password="" delimiter="GO" keepformat="true" classpathref="classpath">
 		
 		<path>
@@ -52,8 +52,8 @@
 				<include name="*.sql" />
 			</fileset>
 		</path>
-		</sql>
-		-->
+		</mysql>
+		
 	</target>
 	
 
