--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 # Database info
 dev_server=
-dev_database_name=Pers_Development
+dev_database_name=Game
 
 # Cherry picking properties
 cherry.dir.sprocs=Sql_Stored_Procedures
