--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
 	<property file="build.properties" />
 	
 	<path id="classpath">
-		<fileset dir="C:\Program Files\Microsoft JDBC MYSQL Server">
+		<fileset dir="C:\Program Files\Microsoft_JDBC_MYSQL_Server">
 			<include name="mysql_connector_java_5_1_44_bin.jar" />
 		</fileset>
 	</path>
