--- a/build.xml
+++ b/build.xml
@@ -15,8 +15,8 @@
 	<property file="build.properties" />
 	
 	<path id="classpath">
-		<fileset dir="C:\Program Files\Microsoft_JDBC_MYSQL_Server">
-			<include name="mysql_connector_java_5_1_44_bin.jar" />
+		<fileset dir="C:\Program Files (x86)\MySQL\Connector.J 5.1\">
+			<include name="mysql-connector-java-5.1.44-bin.jar" />
 		</fileset>
 	</path>
  
@@ -43,7 +43,7 @@
 		<echo> About to connect to server ${database.server} database ${database.name}</echo>
 		<echo>${libs.dir}</echo>
 		
-		<sql driver="com.mysql.jdbc.driver" 
+		<sql driver="com.mysql.jdbc.Driver" 
 		url="jdbc:mysql://${database.server};DatabaseName=${database.name};"
 		userid="root" password="mcrane" classpathref="classpath">
 		
