--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,6 @@
 # Database info
-dev_server=Mysql@127.0.0.1
+dev_server=localhost
+dev_port=3306
 dev_database_name=Game
 
 # Cherry picking properties
