--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 # Database info
-dev_server=localhost:3306//game
+dev_server=localhost:3306
 dev_port=3306
-dev_database_name=Game
+dev_database_name=game
 
 # Cherry picking properties
 cherry.dir.sprocs=Sql_Stored_Procedures
