--- a/build.xml
+++ b/build.xml
@@ -43,7 +43,7 @@
 		<echo> About to connect to server ${database.server} database ${database.name}</echo>
 		<echo>${libs.dir}</echo>
 		
-		<sql driver="com.mysql.jdbc.Driver" url="jdbc:mysql://${database.server}/${database.name};"
+		<sql driver="com.mysql.jdbc.Driver" url="jdbc:mysql://${database.server}/world;"
 		userid="root" password="mcrane" classpathref="classpath">
 		
 		<path>
