--- a/build.xml
+++ b/build.xml
@@ -42,8 +42,9 @@
 	<target name="run_sql_scripts" >
 		<echo> About to connect to server ${database.server} database ${database.name}</echo>
 		<echo>${libs.dir}</echo>
+		<echo>jdbc:mysql://${database.server}/${database.name};</echo>
 		
-		<sql driver="com.mysql.jdbc.Driver" url="jdbc:mysql://${database.server}/world;"
+		<sql driver="com.mysql.jdbc.Driver" url="jdbc:mysql://${database.server}/${database.name};"
 		userid="root" password="mcrane" classpathref="classpath">
 		
 		<path>
